--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-# Allow the SARIF upload to Code Scanning
 permissions:
   contents: read
   security-events: write
@@ -24,22 +23,16 @@ jobs:
         with:
           python-version: "3.x"
 
-      # Optional: install your project deps if Bandit needs to import modules
-      # - name: Install deps
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
       - name: Install Bandit
-        run: pip install bandit
+        run: |
+          python -m pip install --upgrade pip
+          pip install bandit
 
-      # Run Bandit, but don't fail the job on findings.
-      # We still produce SARIF so Code Scanning shows alerts.
       - name: Run Bandit
-        run: bandit -r . -f sarif -o bandit.sarif || true
+        run: |
+          bandit -r . -f sarif -o bandit.sarif || true
 
-      - name: Upload SARIF to code scanning
+      - name: Upload SARIF report to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: bandit.sarif
-
