--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -29,28 +29,16 @@ jobs:
           pip install "bandit>=1.7.6" "bandit-sarif-formatter>=0.9.0"
           bandit --version
 
-      # 1) Show human-readable results in the log so we know Bandit actually finds issues
-      - name: Run Bandit (text output)
+      - name: Run Bandit (text)
         run: |
-          echo "=== Bandit text run (should show findings) ==="
-          bandit -r . -s LOW,MEDIUM,HIGH -i LOW,MEDIUM,HIGH || true
+          bandit -r . || true
 
-      # 2) Produce SARIF for Code Scanning
       - name: Run Bandit (SARIF)
         run: |
-          bandit -r . -s LOW,MEDIUM,HIGH -i LOW,MEDIUM,HIGH -f sarif -o bandit.sarif || true
-          test -f bandit.sarif && echo "SARIF file created."
-          python - <<'PY'
-import json,sys
-data=json.load(open("bandit.sarif"))
-results=len(data["runs"][0].get("results",[]))
-print("SARIF results:", results)
-sys.exit(0 if results>0 else 1)
-PY
-        # If the SARIF has 0 results, the step fails so we know to look at the text run above
+          bandit -r . -f sarif -o bandit.sarif || true
+          if [ ! -f bandit.sarif ]; then echo "bandit.sarif missing"; exit 1; fi
 
       - name: Upload SARIF to Code Scanning
-        if: always() # still upload when previous step failed so we can inspect
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: bandit.sarif
